# the-cubes-demo

./: CMakeLists.txt  LICENSE.txt  README-first.txt  README-linux.txt  README.txt
src/: actioncube.cpp  actioncube.h  actionobject.cpp  actionobject.h  camera.cpp  camera.h  compass.cpp  compass.h  compassdata.cpp  compassdata.h  compasslabel.cpp  compasslabel.h  compasslabeldata.cpp  compasslabeldata.h  compasslabelprogram.cpp  compasslabelprogram.h  compassprogram.cpp  compassprogram.h  cube.cpp  cube.h  cubedata.cpp  cubedata.h  cubeprogram.cpp  cubeprogram.h  cursor.cpp  cursor.h  file.cpp  file.h  filetext.cpp  filetext.h  filetga.cpp  filetga.h  frametimer.cpp  frametimer.h  geom.cpp  geom.h  glbuffer.h  grid.cpp  grid.h  griddata.cpp  (+50 more)
src/data/: actioncube.tga  actioncube_normal.tga  actionsphere.tga  actionsphere_normal.tga  cursor.tga  marble512.tga  modelcube.tga  modelcube_normal.tga  modelsphere.tga  modelsphere_normal.tga  xyz.tga
src/shaders/: compass.fsh  compass.vsh  compasslabel.fsh  compasslabel.vsh  cube.fsh  cube.vsh  grid.fsh  grid.vsh  label.fsh  label.vsh  lighttexture.fsh  lighttexture.vsh  shadowmap.fsh  shadowmap.vsh  shadowmapprefix.vsh  shadowmapview.fsh  shadowmapview.vsh
